--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.study</groupId>
-	<artifactId>home</artifactId>
-	<name>HomeProject</name>
-	<packaging>war</packaging>
-	<version>1.0.0-BUILD-SNAPSHOT</version>
-	<properties>
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>org.study</groupId>
+   <artifactId>home</artifactId>
+   <name>HomeProject</name>
+   <packaging>war</packaging>
+   <version>1.0.0-BUILD-SNAPSHOT</version>
+   <properties>
    <!-- 자바버전을 11로 변경, 스프링 버전 5.2.21.RELEASE로 변경 -->
       <java-version>11</java-version>
       <org.springframework-version>5.2.21.RELEASE</org.springframework-version>
@@ -240,8 +240,20 @@
     <artifactId>jbcrypt</artifactId>
     <version>0.4</version>
 </dependency>
-      
-         
+<!-- 메일 인증 라이브러리 -->
+<!-- https://mvnrepository.com/artifact/javax.mail/mail  -->
+<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.4.7</version>
+</dependency>
+
+<!--   https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context-support</artifactId>
+    <version>${org.springframework-version}</version>
+</dependency>
       
               
    </dependencies>
